finished stretch film product data, and started with tape data

--- a/src/app/products/labels-envelopes/laser-labels/laser-labels.component.html
+++ b/src/app/products/labels-envelopes/laser-labels/laser-labels.component.html
@@ -3,19 +3,19 @@
   <div class="container">
     <div class="row">
       <div class="container mb-5 col-12 col-lg-6">
-        <mdb-carousel [animation]="'slide'">
+        <mdb-carousel class="z-depth-1" [animation]="'slide'">
           <mdb-carousel-item>
             <img
               class="d-block w-100"
               src="../../../../assets/img/laser-labels1.jpg"
-              alt="First slide"
+              alt="Laser Label"
             />
           </mdb-carousel-item>
           <mdb-carousel-item>
             <img
               class="d-block w-100"
               src="../../../../assets/img/laser-labels1.jpg"
-              alt="Second slide"
+              alt="Laser Label"
             />
           </mdb-carousel-item>
         </mdb-carousel>
