--- a/src/app/products/stretch-film/machine-stretch-wrap/machine-stretch-wrap.component.html
+++ b/src/app/products/stretch-film/machine-stretch-wrap/machine-stretch-wrap.component.html
@@ -1,3 +1,129 @@
-<p>
-  machine-stretch-wrap works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/machine-stretch-film.jpg"
+            alt="Machine Stretch Film"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/machine-stretch-film.jpg"
+                    alt="Machine Stretch Film"
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">MACHINE STRETCH WRAP (SPECIALTY)</h3>
+          <p class="card-text lead">
+            Clear & durable stretch wrap used by the stretch wrap machine.
+          </p>
+          <p class="card-text lead">
+            <strong>Durable:</strong> Resists puncturing or tearing, even around
+            sharp corners.
+          </p>
+          <p class="card-text lead">
+            <strong>Quality:</strong> Superior cling keeps loads secure and
+            intact.
+          </p>
+          <p class="card-text lead">
+            <strong>User-friendly:</strong> wraps loads quickly with little
+            effort.
+          </p>
+          <p class="card-text lead">
+            Stretch Wrap Machinery available.
+          </p>
+        </div>
+      </div>
+
+      <!--TABLE-->
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col" mdbTooltip="Product Number" placement="left">
+              PRODUCT #
+            </th>
+            <th scope="col">
+              SIZE
+            </th>
+            <th scope="col">
+              DURABILITY
+            </th>
+            <th scope="col" mdbTooltip="Break Strength" placement="left">
+              ROLLS/CASE
+            </th>
+            <th scope="col">
+              CASE/PALLET
+            </th>
+            <th scope="col" mdbTooltip="Tooltip on left" placement="left">
+              ADD TO CART
+            </th>
+          </tr>
+        </thead>
+        <tr *ngFor="let wrap of machineStretchWrap" style="text-align: center;">
+          <td class="item align-middle">{{ wrap.productNumber }}</td>
+          <td class="item align-middle">{{ wrap.size }}</td>
+          <td class="item align-middle">{{ wrap.durability }}</td>
+          <td class="item align-middle">{{ wrap.rollsPerCase }}</td>
+          <td class="item align-middle">{{ wrap.casePerPallet }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              placeholder="qty"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
