--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -210,10 +210,9 @@
                   <li routerLink="hand-stretch-wrap"><a mdbWavesEffect>Hand Stretch Wrap</a></li>
                   <li routerLink="machine-stretch-wrap"><a mdbWavesEffect>Machine Stretch Wrap</a></li>
                   <li routerLink="opaque-stretch-wrap"><a mdbWavesEffect>Opaque Stretch Wrap</a></li>
-                  <li routerLink="shrink-wrap-roll"><a mdbWavesEffect>Stretch Wrap Dispenser</a></li>
-                  <li routerLink="shrink-wrap-system"><a mdbWavesEffect>Stretch Wrap Machinery</a></li>
-                  <li routerLink="stretch-wrap-dispenser"><a mdbWavesEffect>Shrink Wrap Roll</a></li>
-                  <li routerLink="stretch-wrap-machinery"><a mdbWavesEffect>Shrink Wrap System</a></li>
+                  <li routerLink="shrink-wrap-roll"><a mdbWavesEffect>Shrink Wrap Roll</a></li>
+                  <li routerLink="stretch-wrap-machinery"><a mdbWavesEffect>Stretch Wrap Machinery</a></li>
+                  <li routerLink="shrink-wrap-system"><a mdbWavesEffect>Shrink Wrap System</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
@@ -224,19 +223,15 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Carton Sealing Tape</a></li>
-                  <li><a href="#" mdbWavesEffect>Colored Tape</a></li>
-                  <li><a href="#" mdbWavesEffect>Custom Print Tape</a></li>
-                  <li><a href="#" mdbWavesEffect>Filament Tape</a></li>
-                  <li><a href="#" mdbWavesEffect>Masking Tape</a></li>
-                  <li>
-                    <a href="#" mdbWavesEffect>Office Tape & Dispenser</a>
-                  </li>
-                  <li><a href="#" mdbWavesEffect>Tape Dispenser</a></li>
-                  <li><a href="#" mdbWavesEffect>Vinyl Tape</a></li>
-                  <li>
-                    <a href="#" mdbWavesEffect>Water-Activated Gummed Tape</a>
-                  </li>
+                  <li routerLink="carton-sealing-tape"><a mdbWavesEffect>Carton Sealing Tape</a></li>
+                  <li routerLink="colored-tape"><a mdbWavesEffect>Colored Tape</a></li>
+                  <li routerLink="custom-print-tape"><a mdbWavesEffect>Custom Print Tape</a></li>
+                  <li routerLink="filament-tape"><a mdbWavesEffect>Filament Tape</a></li>
+                  <li routerLink="masking-tape"><a mdbWavesEffect>Masking Tape</a></li>
+                  <li routerLink="office-tape-dispenser"><a mdbWavesEffect>Office Tape & Dispenser</a></li>
+                  <li routerLink="tape-dispenser"><a mdbWavesEffect>Tape Dispenser</a></li>
+                  <li routerLink="vinyl-tape"><a mdbWavesEffect>Vinyl Tape</a></li>
+                  <li routerLink="water-activated-gummed-tape"><a mdbWavesEffect>Water-Activated Gummed Tape</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
