--- a/src/app/products/stretch-film/shrink-wrap-roll/shrink-wrap-roll.component.html
+++ b/src/app/products/stretch-film/shrink-wrap-roll/shrink-wrap-roll.component.html
@@ -1,3 +1,183 @@
-<p>
-  shrink-wrap-roll works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/shrink-wrap-roll.jpg"
+            alt="Shrink Wrap Roll"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/shrink-wrap-roll.jpg"
+                    alt="Shrink Wrap Roll"
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">SHRINK WRAP ROLL & BAGS</h3>
+          <p class="card-text lead">
+            High quality and best value shrink wrap for containing products
+            together securely.
+          </p>
+          <p class="card-text lead">
+            <strong>Protection:</strong> Our durable, puncture resistant shrink
+            wrap offers protection against scratches.
+          </p>
+          <p class="card-text lead">
+            <strong>Perfect Usage for:</strong> Food, Medicine, Gift Baskets,
+            DVD, CD, Books
+          </p>
+          <p class="card-text lead">
+            Uses Heat Gun.
+          </p>
+        </div>
+      </div>
+
+      <!-- TABLE 1 -->
+      <h3 class="lead">POLYOLEFIN</h3>
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col">
+              PRODUCT #
+            </th>
+            <th scope="col">
+              DURABILITY
+            </th>
+            <th scope="col">
+              WIDTH
+            </th>
+            <th scope="col">
+              DESCRIPTION
+            </th>
+            <th scope="col">
+              LENGTH/ROLL
+            </th>
+            <th scope="col">
+              ADD TO CART
+            </th>
+          </tr>
+        </thead>
+        <tr
+          *ngFor="let wrap of shrinkWrapRoll"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ wrap.productNumber }}</td>
+          <td class="item align-middle">{{ wrap.durability }}</td>
+          <td class="item align-middle">{{ wrap.width }}</td>
+          <td class="item align-middle">{{ wrap.description }}</td>
+          <td class="item align-middle">{{ wrap.lengthPerRoll }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              placeholder="qty"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+
+      <!-- TABLE 2 -->
+      <h3 class="lead">PVC</h3>
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+        <tr
+          style="text-align: center; background-color: #0c4b7d; color: white;"
+        >
+          <th scope="col">
+            PRODUCT #
+          </th>
+          <th scope="col">
+            DURABILITY
+          </th>
+          <th scope="col">
+            SIZE
+          </th>
+          <th scope="col">
+            DESCRIPTION
+          </th>
+          <th scope="col">
+            NO./CASE
+          </th>
+          <th scope="col">
+            ADD TO CART
+          </th>
+        </tr>
+        </thead>
+        <tr
+          *ngFor="let bag of pvcBag"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ bag.productNumber }}</td>
+          <td class="item align-middle">{{ bag.durability }}</td>
+          <td class="item align-middle">{{ bag.size }}</td>
+          <td class="item align-middle">{{ bag.description }}</td>
+          <td class="item align-middle">{{ bag.numberPerCase }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              placeholder="qty"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
